1220 Remove swirlds.commons and update to new version of metrics API
Signed-off-by: Ivan St. Ivanov <ivan.st.ivanov@gmail.com>

# Conflicts:
#	block-node/backfill/src/test/java/org/hiero/block/node/backfill/BackfillPluginTest.java
#	block-node/stream-publisher/src/main/java/org/hiero/block/node/stream/publisher/PublisherHandler.java
#	block-node/stream-publisher/src/test/java/org/hiero/block/node/stream/publisher/LiveStreamPublisherManagerTest.java